crates/es-fluent-cli/tests/snapshots/cli_tests__workspace__clean_dry_run.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_clean_dry_run_test(&WORKSPACE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
Would update FTL file: [TEMP_DIR]/i18n/en/test-app-a.ftl
- z_last = Last
  hello_a = Hello from App A
- orphan_key = Orphan
- 
- shared-Photos = 
+ shared-Photos =
      { $user_name } { $photo_count ->
          [one] added a new photo
         *[other] added { $photo_count } new photos
  ...
          [female] her stream
         *[other] their stream
      }.
- 
  gender-Male = Male
  gender-Female = Female
  gender-Other = Other

Unchanged: test-lib-b

STDERR:
