crates/es-fluent-cli/tests/snapshots/cli_tests__workspace__fmt_real.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_fmt_real_test(&WORKSPACE_CONFIG)
---
STDOUT:
Fluent FTL Formatter
Discovered 2 crate(s)
Formatted: i18n/en/test-app-a.ftl
Done: 1 formatted, 1 unchanged

STDERR:
