crates/es-fluent-cli/tests/snapshots/cli_tests__workspace__generate_incremental-2.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output_incremental
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
test-app-a generated in [DURATION] (8 resources)
Unchanged: test-lib-b

STDERR:
