crates/es-fluent-cli/tests/snapshots/cli_tests__workspace__generate_real.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_generate_real_test(&WORKSPACE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
test-app-a generated in [DURATION] (7 resources)
Unchanged: test-lib-b

STDERR:
